src/test/ui/error-codes/E0253.stderr
error[E0253]: `do_something` is not directly importable
  --> $DIR/E0253.rs:7:5
   |
LL | use foo::MyTrait::do_something;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot be imported directly

error: aborting due to previous error

For more information about this error, try `rustc --explain E0253`.
